*SVN*

* Added assert_select* for CSS selector-based testing (deprecates assert_tag) #5936 [assaf.arkin@gmail.com]

* radio_button_tag generates unique id attributes.  #3353 [Bob Silva, somekool@gmail.com]

* strip_tags returns nil for a blank arg such as nil or "".  #2229 [duncan@whomwah.com]

* Cleanup assert_tag :children counting.  #2181 [jamie@bravenet.com]

* button_to accepts :method so you can PUT and DELETE with it.  #6005 [Dan Webb]

* Update sanitize text helper to strip plaintext tags, and <img src="javascript:bang">.  [Rick Olson]

* Update routing documentation.  Closes #6017 [Nathan Witmer]

* Add routing tests to assert that RoutingError is raised when conditions aren't met.  Closes #6016 [Nathan Witmer]

* Deprecation: update docs. #5998 [jakob@mentalized.net, Kevin Clark]

* Make auto_link parse a greater subset of valid url formats. [Jamis Buck]

* Integration tests: headers beginning with X aren't excluded from the HTTP_ prefix, so X-Requested-With becomes HTTP_X_REQUESTED_WITH as expected. [Mike Clark]

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Fix send_data documentation typo.  #5982 [brad@madriska.com]

* Switch to using FormEncodedPairParser for parsing request parameters. [Nicholas Seckar, DHH]

* respond_to .html now always renders #{action_name}.rhtml so that registered custom template handlers do not override it in priority. Custom mime types require a block and throw proper error now. [Tobias Luetke]

* Deprecation: test deprecated instance vars in partials. [Jeremy Kemper]

* Add UrlWriter to allow writing urls from Mailers and scripts. [Nicholas Seckar]

* Clean up and run the Active Record integration tests by default.  #5854 [kevin.clark@gmail.com, Jeremy Kemper]

* Correct example in cookies docs.  #5832 [jessemerriman@warpmail.net]

* Updated to script.aculo.us 1.6.2 [Thomas Fuchs]

* Relax Routing's anchor pattern warning; it was preventing use of [^/] inside restrictions. [Nicholas Seckar]
