@@ -43,7 +43,7 @@ require 'action_controller/benchmarking'
 require 'action_controller/flash'
 require 'action_controller/filters'
 require 'action_controller/layout'
-require 'action_controller/dependencies'
+require 'action_controller/deprecated_dependencies'
 require 'action_controller/mime_responds'
 require 'action_controller/pagination'
 require 'action_controller/scaffolding'
